Deprecated API usage fix